force-app/main/default/objects/Contact/fields/AgeAtReferral__c.field-meta.xml
<CustomField>
    <fullName>AgeAtReferral__c</fullName>
    <formula>IF(ISNULL( Birthdate  ) , null , FLOOR((ReferralDate__c-Birthdate +1)/365.2425))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age At Referral</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>