force-app/main/default/objects/Contact/fields/AllergiesMedicalConditions__c.field-meta.xml
<CustomField>
    <fullName>AllergiesMedicalConditions__c</fullName>
    <label>Allergies/Medical Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>