force-app/main/default/objects/Contact/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loughborough</fullName>
            </value>
            <value>
                <fullName>Leicester</fullName>
            </value>
            <value>
                <fullName>Derby</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>