force-app/main/default/objects/Contact/fields/AtRiskOfSexualExplotation__c.field-meta.xml
<CustomField>
    <fullName>AtRiskOfSexualExplotation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>At Risk Of Sexual Explotation</label>
    <type>Checkbox</type>
</CustomField>