force-app/main/default/objects/Contact/fields/ConcerningSexualActivity__c.field-meta.xml
<CustomField>
    <fullName>ConcerningSexualActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concerning Sexual Activity</label>
    <type>Checkbox</type>
</CustomField>