force-app/main/default/objects/Contact/fields/Consent_for_Referral_By__c.field-meta.xml
<CustomField>
    <fullName>Consent_for_Referral_By__c</fullName>
    <label>Consent for Referral By:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parent/Guardian</fullName>
            </value>
            <value>
                <fullName>Young Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>