force-app/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mentor</fullName>
            </value>
            <value>
                <fullName>Donor (Major)</fullName>
            </value>
            <value>
                <fullName>Donor</fullName>
            </value>
            <value>
                <fullName>Challenge eventer</fullName>
            </value>
            <value>
                <fullName>Supporter (Business)</fullName>
            </value>
            <value>
                <fullName>Supporter (Individual)</fullName>
            </value>
            <value>
                <fullName>Referrer</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Prospects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>