force-app/main/default/objects/Contact/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Avon</fullName>
            </value>
            <value>
                <fullName>Bedfordshire</fullName>
            </value>
            <value>
                <fullName>Berkshire</fullName>
            </value>
            <value>
                <fullName>Borders</fullName>
            </value>
            <value>
                <fullName>Buckinghamshire</fullName>
            </value>
            <value>
                <fullName>Cambridgeshire</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Cheshire</fullName>
            </value>
            <value>
                <fullName>Cleveland</fullName>
            </value>
            <value>
                <fullName>Clwyd</fullName>
            </value>
            <value>
                <fullName>Cornwall</fullName>
            </value>
            <value>
                <fullName>CountyAntrim</fullName>
            </value>
            <value>
                <fullName>CountyArmagh</fullName>
            </value>
            <value>
                <fullName>CountyDown</fullName>
            </value>
            <value>
                <fullName>CountyFermanagh</fullName>
            </value>
            <value>
                <fullName>CountyLondonderry</fullName>
            </value>
            <value>
                <fullName>CountyTyrone</fullName>
            </value>
            <value>
                <fullName>Cumbria</fullName>
            </value>
            <value>
                <fullName>Derbyshire</fullName>
            </value>
            <value>
                <fullName>Devon</fullName>
            </value>
            <value>
                <fullName>Dorset</fullName>
            </value>
            <value>
                <fullName>DumfriesandGalloway</fullName>
            </value>
            <value>
                <fullName>Durham</fullName>
            </value>
            <value>
                <fullName>Dyfed</fullName>
            </value>
            <value>
                <fullName>EastSussex</fullName>
            </value>
            <value>
                <fullName>Essex</fullName>
            </value>
            <value>
                <fullName>Fife</fullName>
            </value>
            <value>
                <fullName>Gloucestershire</fullName>
            </value>
            <value>
                <fullName>Grampian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>