force-app/main/default/objects/Contact/fields/CurrentAge__c.field-meta.xml
<CustomField>
    <fullName>CurrentAge__c</fullName>
    <formula>IF(ISNULL( Birthdate ) , null , FLOOR((TODAY()-Birthdate +1)/365.2425))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>