force-app/main/default/objects/Contact/fields/DateReferralConsentGained__c.field-meta.xml
<CustomField>
    <fullName>DateReferralConsentGained__c</fullName>
    <label>Date Referral Consent Gained</label>
    <type>Date</type>
</CustomField>