force-app/main/default/objects/Contact/fields/DecreaseInSelfEsteemRelationship__c.field-meta.xml
<CustomField>
    <fullName>DecreaseInSelfEsteemRelationship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decrease In Self-Esteem Relationship</label>
    <type>Checkbox</type>
</CustomField>