force-app/main/default/objects/Contact/fields/EngagingInSextingOtherSocial__c.field-meta.xml
<CustomField>
    <fullName>EngagingInSextingOtherSocial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engaging In Sexting/Other Social</label>
    <type>Checkbox</type>
</CustomField>