force-app/main/default/objects/Contact/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>White: British</fullName>
            </value>
            <value>
                <fullName>White: Irish</fullName>
            </value>
            <value>
                <fullName>White: Gypsy or Irish Traveller</fullName>
            </value>
            <value>
                <fullName>White: Any other White background</fullName>
            </value>
            <value>
                <fullName>Mixed: White and Black Caribbean</fullName>
            </value>
            <value>
                <fullName>Mixed: White and Black African</fullName>
            </value>
            <value>
                <fullName>Mixed: White and Asian</fullName>
            </value>
            <value>
                <fullName>Mixed: Any other Mixed or Multiple ethnic background</fullName>
            </value>
            <value>
                <fullName>Asian: Indian</fullName>
            </value>
            <value>
                <fullName>Asian: Pakistani</fullName>
            </value>
            <value>
                <fullName>Asian: Bangladeshi</fullName>
            </value>
            <value>
                <fullName>Asian: Chinese</fullName>
            </value>
            <value>
                <fullName>Asian: Any other Asian background</fullName>
            </value>
            <value>
                <fullName>Black: Black, African, Caribbean or Black British</fullName>
            </value>
            <value>
                <fullName>Black: African</fullName>
            </value>
            <value>
                <fullName>Black: Caribbean</fullName>
            </value>
            <value>
                <fullName>Black: Any other Black, African or Caribbean background</fullName>
            </value>
            <value>
                <fullName>Arab</fullName>
            </value>
            <value>
                <fullName>Any other ethnic group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>