force-app/main/default/objects/Contact/fields/Ethnicity_Other_Details__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity_Other_Details__c</fullName>
    <label>Ethnicity, Other: Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>