force-app/main/default/objects/Contact/fields/Geographical_Area__c.field-meta.xml
<CustomField>
    <fullName>Geographical_Area__c</fullName>
    <label>Geographical Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>East Midlands</fullName>
            </value>
            <value>
                <fullName>West Midlands</fullName>
            </value>
            <value>
                <fullName>North West</fullName>
            </value>
            <value>
                <fullName>NorthEast</fullName>
                <label>North East</label>
            </value>
            <value>
                <fullName>Yorkshire and the Humber</fullName>
            </value>
            <value>
                <fullName>East of England</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>South East</fullName>
            </value>
            <value>
                <fullName>South West</fullName>
            </value>
            <value>
                <fullName>Loughborough</fullName>
            </value>
            <value>
                <fullName>Leicester</fullName>
            </value>
            <value>
                <fullName>Derby</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>