force-app/main/default/objects/Contact/fields/Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact__c</fullName>
    <label>Lead Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Set</fullName>
                <default>true</default>
                <label>Not Set</label>
            </value>
            <value>
                <fullName>Alice Clapton</fullName>
            </value>
            <value>
                <fullName>Alisha Hollins</fullName>
            </value>
            <value>
                <fullName>Aminata Kamara</fullName>
            </value>
            <value>
                <fullName>Amy Connell</fullName>
            </value>
            <value>
                <fullName>Andy Stone</fullName>
            </value>
            <value>
                <fullName>Anna Yates</fullName>
            </value>
            <value>
                <fullName>Anne Clow</fullName>
            </value>
            <value>
                <fullName>Anthony Parkes</fullName>
            </value>
            <value>
                <fullName>Bethany Gladwin</fullName>
            </value>
            <value>
                <fullName>Christian Zamore</fullName>
            </value>
            <value>
                <fullName>Dani de Simone</fullName>
            </value>
            <value>
                <fullName>Emma Mullins</fullName>
            </value>
            <value>
                <fullName>Gary Lane</fullName>
            </value>
            <value>
                <fullName>Isobel Lowings</fullName>
            </value>
            <value>
                <fullName>James Barnsley</fullName>
            </value>
            <value>
                <fullName>Joanna Burrows</fullName>
            </value>
            <value>
                <fullName>John Olaeye</fullName>
            </value>
            <value>
                <fullName>Jo Woodman</fullName>
            </value>
            <value>
                <fullName>Karen Varty</fullName>
            </value>
            <value>
                <fullName>Kay Bennett</fullName>
            </value>
            <value>
                <fullName>Keith Taylor</fullName>
            </value>
            <value>
                <fullName>Lisa Powell</fullName>
            </value>
            <value>
                <fullName>Liv Bauckham</fullName>
            </value>
            <value>
                <fullName>Lizz Scarborough</fullName>
            </value>
            <value>
                <fullName>Maria Pilinovics</fullName>
            </value>
            <value>
                <fullName>Matt Benton</fullName>
            </value>
            <value>
                <fullName>Mohsin Shaikh</fullName>
            </value>
            <value>
                <fullName>Olivia Pitt</fullName>
            </value>
            <value>
                <fullName>Paul Barker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>