force-app/main/default/objects/Contact/fields/Love4LifeReferral__c.field-meta.xml
<CustomField>
    <fullName>Love4LifeReferral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Love4Life Referral</label>
    <type>Checkbox</type>
</CustomField>