force-app/main/default/objects/Contact/fields/MentalEmotionalSupport__c.field-meta.xml
<CustomField>
    <fullName>MentalEmotionalSupport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mental/Emotional Support</label>
    <type>Checkbox</type>
</CustomField>