force-app/main/default/objects/Contact/fields/OtherReferralReasons__c.field-meta.xml
<CustomField>
    <fullName>OtherReferralReasons__c</fullName>
    <label>Other Referral Reasons</label>
    <type>TextArea</type>
</CustomField>