force-app/main/default/objects/Contact/fields/OtherRelevantInfo__c.field-meta.xml
<CustomField>
    <fullName>OtherRelevantInfo__c</fullName>
    <label>Other Relevant Info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>