force-app/main/default/objects/Contact/fields/Parent_Guardian_2_Phone__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_2_Phone__c</fullName>
    <label>Parent Guardian 2 Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>