force-app/main/default/objects/Contact/fields/Parent_Guardian_Address__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_Address__c</fullName>
    <label>Parent Guardian Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>