force-app/main/default/objects/Contact/fields/ParentGuardianEmail__c.field-meta.xml
<CustomField>
    <fullName>ParentGuardianEmail__c</fullName>
    <label>Parent Guardian Email</label>
    <type>Email</type>
</CustomField>