force-app/main/default/objects/Contact/fields/ParentGuardianFirstName__c.field-meta.xml
<CustomField>
    <fullName>ParentGuardianFirstName__c</fullName>
    <label>Parent Guardian First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>