force-app/main/default/objects/Contact/fields/ParentGuardianLastName__c.field-meta.xml
<CustomField>
    <fullName>ParentGuardianLastName__c</fullName>
    <label>Parent Guardian Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>