force-app/main/default/objects/Contact/fields/ParentGuardianPhone__c.field-meta.xml
<CustomField>
    <fullName>ParentGuardianPhone__c</fullName>
    <label>Parent Guardian Phone</label>
    <type>Phone</type>
</CustomField>