force-app/main/default/objects/Contact/fields/PositionHeld__c.field-meta.xml
<CustomField>
    <fullName>PositionHeld__c</fullName>
    <label>Position Held</label>
    <length>100</length>
    <type>Text</type>
</CustomField>