force-app/main/default/objects/Contact/fields/ProtectionInNeedPlan__c.field-meta.xml
<CustomField>
    <fullName>ProtectionInNeedPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Protection/In Need Plan</label>
    <type>Checkbox</type>
</CustomField>