force-app/main/default/objects/Contact/fields/ReferralConsentGained__c.field-meta.xml
<CustomField>
    <fullName>ReferralConsentGained__c</fullName>
    <inlineHelpText>Love4Life also require the referrer to gain parental/guardian consent in order to complete this referral.</inlineHelpText>
    <label>Referral Consent Gained</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>