force-app/main/default/objects/Contact/fields/ReferralDetails__c.field-meta.xml
<CustomField>
    <fullName>ReferralDetails__c</fullName>
    <label>Referral Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>