force-app/main/default/objects/Contact/fields/ReferredBy__c.field-meta.xml
<CustomField>
    <fullName>ReferredBy__c</fullName>
    <label>Referred By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent/Guardian</fullName>
            </value>
            <value>
                <fullName>Self-Referral</fullName>
            </value>
            <value>
                <fullName>Referral Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>