force-app/main/default/objects/Contact/fields/ReferredbyParent__c.field-meta.xml
<CustomField>
    <fullName>ReferredbyParent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referred by Parent</label>
    <type>Checkbox</type>
</CustomField>