force-app/main/default/objects/Contact/fields/RelationshipInfoAdviceGuidance__c.field-meta.xml
<CustomField>
    <fullName>RelationshipInfoAdviceGuidance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relationship Info/Advice/Guidance</label>
    <type>Checkbox</type>
</CustomField>