force-app/main/default/objects/Contact/fields/ReviewStatus__c.field-meta.xml
<CustomField>
    <fullName>ReviewStatus__c</fullName>
    <inlineHelpText>Used to outline whether this referral has been assigned to a service or is still awaiting placement</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting List</fullName>
                <default>true</default>
                <label>Waiting List</label>
            </value>
            <value>
                <fullName>Assigned to Service</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>