force-app/main/default/objects/Contact/fields/RiskAssessment__c.field-meta.xml
<CustomField>
    <fullName>RiskAssessment__c</fullName>
    <label>Risk Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Risk assessment in place</fullName>
            </value>
            <value>
                <fullName>Requires a risk assessment</fullName>
            </value>
            <value>
                <fullName>No risk assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>