force-app/main/default/objects/Contact/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>School Contacts</relationshipLabel>
    <relationshipName>SchoolContacts</relationshipName>
    <type>Lookup</type>
</CustomField>