force-app/main/default/objects/Contact/fields/SchoolDetails__c.field-meta.xml
<CustomField>
    <fullName>SchoolDetails__c</fullName>
    <inlineHelpText>If the system cannot find an existing School record to match the young person to, school details provided by the referrer will show here</inlineHelpText>
    <label>School Details</label>
    <type>TextArea</type>
</CustomField>