force-app/main/default/objects/Contact/fields/Send_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Send_Newsletter__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Tells me that they wish to receive our regular newsletter</description>
    <label>Send Newsletter</label>
    <type>Checkbox</type>
</CustomField>