force-app/main/default/objects/Contact/fields/SOTSurveyLinkUnique__c.field-meta.xml
<CustomField>
    <fullName>SOTSurveyLinkUnique__c</fullName>
    <formula>HYPERLINK(&apos;https://www.tfaforms.com/4923900?tfa_598=&apos;&amp;Id&amp;&apos;&amp;tfa_600=&apos;&amp;FirstName , &apos;Click Here&apos;)</formula>
    <inlineHelpText>Unique link to SOT questionnaire, specific to this young person</inlineHelpText>
    <label>SOT Survey Link (Unique)</label>
    <type>Text</type>
</CustomField>