force-app/main/default/objects/Contact/fields/SupportForConfidenceSelfWorth__c.field-meta.xml
<CustomField>
    <fullName>SupportForConfidenceSelfWorth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Support For Confidence/Self-Worth</label>
    <type>Checkbox</type>
</CustomField>