force-app/main/default/objects/Contact/fields/UnhealthyFriendshipsRelationships__c.field-meta.xml
<CustomField>
    <fullName>UnhealthyFriendshipsRelationships__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unhealthy Friendships/Relationships</label>
    <type>Checkbox</type>
</CustomField>