force-app/main/default/objects/Contact/fields/X121Referral__c.field-meta.xml
<CustomField>
    <fullName>X121Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>121 Referral</label>
    <type>Checkbox</type>
</CustomField>