force-app/main/default/objects/Contact/fields/YearGroup__c.field-meta.xml
<CustomField>
    <fullName>YearGroup__c</fullName>
    <label>Year Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Year 7</fullName>
            </value>
            <value>
                <fullName>Year 8</fullName>
            </value>
            <value>
                <fullName>Year 9</fullName>
            </value>
            <value>
                <fullName>Year 10</fullName>
            </value>
            <value>
                <fullName>Year 11</fullName>
            </value>
            <value>
                <fullName>Year 12</fullName>
            </value>
            <value>
                <fullName>Year 13x</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>