force-app/main/default/objects/Contact/fields/YPReference__c.field-meta.xml
<CustomField>
    <fullName>YPReference__c</fullName>
    <externalId>true</externalId>
    <label>YP Reference</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>