force-app/main/default/objects/Contact/recordTypes/Donor.recordType-meta.xml
<RecordType>
    <fullName>Donor</fullName>
    <active>true</active>
    <description>Used for all contacts who are not Young People</description>
    <label>General</label>
</RecordType>