force-app/main/default/objects/Contact/recordTypes/Young_Person.recordType-meta.xml
<RecordType>
    <fullName>Young_Person</fullName>
    <active>true</active>
    <description>To be used for the young people (girls) who access Love4Life&apos;s services</description>
    <label>Young Person</label>
</RecordType>