force-app/main/default/objects/Contact/validationRules/Lead_Contact_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Contact_required</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(  Key_Contact__c , &quot;Not Set&quot;)</errorConditionFormula>
    <errorDisplayField>Key_Contact__c</errorDisplayField>
    <errorMessage>Lead Contact must be set. Please set the lead contact</errorMessage>
</ValidationRule>