force-app/main/default/objects/Contact/validationRules/MUST_ENTER_1_EMAIL.validationRule-meta.xml
<ValidationRule>
    <fullName>MUST_ENTER_1_EMAIL</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(  npe01__AlternateEmail__c  )
 &amp;&amp; 
ISBLANK(   npe01__HomeEmail__c )
 &amp;&amp; 
ISBLANK(  npe01__WorkEmail__c  )
&amp;&amp;
 RecordType.DeveloperName &lt;&gt; &quot;Young_Person&quot;</errorConditionFormula>
    <errorMessage>PLEASE ENTER AT LEAST ONE VALID EMAIL ADDRESS</errorMessage>
</ValidationRule>