force-app/main/default/objects/Contact/listViews/All_Current_Bounced.listView-meta.xml
<ListView>
    <fullName>All_Current_Bounced</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL_BOUNCED_REASON</columns>
    <columns>CONTACT.EMAIL_BOUNCED_DATE</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IS_EMAIL_ADDRESS_BOUNCED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Current Bounced</label>
</ListView>